aula dia 08 maio

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head> 
  <meta charset="UTF-8"> 
  <meta name="viewport" content="width=device-width, initial-scale=1.0">  <title>Meu E-commerce</title> 
- <link rel="stylesheet" href="style.css"> 
+ <link rel="stylesheet" href="style.css">
+ <script src="script.js"></script> 
 </head> 
 <body> 
  <header> 
@@ -13,12 +14,12 @@
  <input type="text" placeholder="Pesquisar..."> 
  <button type="submit">Buscar</button> 
  </div> 
- <div class="fraseDeImpacto">Frase de impacto</div> 
+ <div class="fraseDeImpacto">Adorne-se com o estilo: onde cada peça é<br>uma declaração de elegância e personalidade</div> 
  </div> 
  </header> 
  <nav> 
  <ul> 
- <li><a href="#">Criar sua Conta</a></li> 
+ <li><a href="cadastro.html">Criar sua Conta</a></li> 
  <li><a href="#">Entrar</a></li> 
  <li><a href="#">Carrinho</a></li> 
  </ul> 
@@ -26,13 +27,13 @@
  <section class="promocoes"> 
  <div class="promocoes-carrosel"> 
  <div class="promo-item"> 
- <img src="carrosel1.png" alt="Promoção 1"> 
+ <img src="carrosel1.jpeg" alt="Promoção 1"> 
  </div> 
  <div class="promo-item"> 
- <img src="carrosel2.png" alt="Promoção 2"> 
+ <img src="carrosel2.jpeg" alt="Promoção 2"> 
  </div>
  <div class="promo-item"> 
- <img src="carrosel3.png" alt="Promoção 3"> 
+ <img src="carrosel3.jpeg" alt="Promoção 3"> 
  </div> 
  <!-- Botões de navegação --> 
  <div class="navigation-buttons"> 
