--- a/index.html
+++ b/index.html
@@ -43,9 +43,54 @@
  <section class="products"> 
  <h2>Produtos</h2> 
  <ul> 
- <li>Produto 1</li> 
+ <li>Produto 1
+<li class="product">
+    <div class="product-info">
+        <img src="carrosel1.jpeg" alt="Produto1" class="produto1">
+        <h3>Colar Coracao</h3>
+        <p>Valor: R$ 65,00</p>
+    </div>
+
+    <div class="product-details" style="display: none;">
+        <p>Colar de ouro 50 quilates</p>
+        <button class="buy-button">Comprar</button>
+        <button class="add-to-cart-button">Adicionar ao Carrinho</button>
+    </div>
+</li>
+
+
+
+ </li> 
  <li>Produto 2</li> 
+ <li class="product">
+    <div class="product-info">
+        <img src="carrosel2.jpeg" alt="Produto2" class="Produto2">
+        <h3>Pulseira de Berloques</h3>
+        <p>Valor: R$ 80,00</p>
+    </div>
+
+    <div class="product-details" style="display: none;">
+        <p>Pulseira de Prata</p>
+        <button class="buy-button">Comprar</button>
+        <button class="add-to-cart-button">Adicionar ao Carrinho</button>
+    </div>
+
+    </li>
  <li>Produto 3</li> 
+ <li class="product">
+    <div class="product-info">
+        <img src="carrosel3.jpeg" alt="Produto3" class="Produto3">
+        <h3>Anel de Ouro com pedra Diamante</h3>
+        <p>Valor: R$ 120,00</p>
+    </div>
+
+    <div class="product-details" style="display: none;">
+        <p>Anel de Ouro com pedra Diamante</p>
+        <button class="buy-button">Comprar</button>
+        <button class="add-to-cart-button">Adicionar ao Carrinho</button>
+    </div>
+
+    </li>
  <!-- Adicione mais produtos conforme necessário --> 
  </ul> 
  </section> 
